--- a/style.css
+++ b/style.css
@@ -59,33 +59,78 @@ form{
     font-weight: bold;
 }
 form i{
-       
-    border-color: #DEEBFF;
-    border-style: solid;
-    padding-left: 21px;
-    font-weight: bold;    
+    padding: 17px;
+    border-radius: 16px 0px 0px 16px;
+    background-color: #F2F2F2;     
     
+}
+
+.barre{
+    border-color: #F2F2F2;
+    border-style: solid;
+    padding-left: 30px;
+    padding-right: 30px;
+    font-weight: bold;
+    font-size: medium;
+    border-right-width: right;
 }
 
 .button {
     background-color: #0065FC;
-    border-radius: 0px 11px 11px 0px;
+    border-radius: 0px 16px 16px 0px;
     color: #FFFFFF;
     border-color: #0065fc;
-    border-style: none;    
+    border-style: none;
+    padding-left: 30px;
+    padding-right: 30px;
+    font-size: medium;    
 }
 #filtres{
     display: flex;
     justify-content: space-around;
     width: 75%;
-    
+    font-weight: bold;
+    margin-top: 27px;
+    margin-bottom: 15px;
+    margin-left: -30px;
 }
 #filtres i{
     background-color:#DEEBFF ;
     color: #0065FC;
-    border-radius: 50px;
+    border-radius: 50px 50px 50px 50px;
+    padding: 18px;
+    position:relative;
+    left:17px;
+    width:16px;
+}
+#filtres div{
+    display: flex;
     
 }
+#eco p,#famille p,#love p,#pets p{
+border: 2px #F2F2F2 solid;
+border-radius: 0px 30px 30px 0px;
+border-left: hidden;
+text-align: center;
+margin: 0px;
+padding: 9px;
+padding-top: 15px;
+padding-left: 27px;
+padding-right: 20px;
+}
+}
+#info{
+    display: flex;
+    padding-left: 20px;
+}
+#info i{
+    color:#0066FC;
+}
+#info p{
+    margin-top: -18px;
+    padding-left: 25px;
+}
+
 
 
 
