--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-@font-face {
+@font-face 
+{
     font-family: "raleway";
     src:
         url('Raleway-VariableFont_wght.ttf') format('truetype'),
@@ -12,60 +13,78 @@
 {
     font-family: raleway, Arial,Verdana, Geneva, Tahoma, sans-serif 
 }
-body{
+
+body
+{
+    width: 100%;
     padding: 0px;
     margin: 0px;
 }
-img{
-    width: 15%;
+
+img
+{
+    width: 25%;
+    
 }
-header{
+
+header
+{
     width: 100%;
     display: flex;
     justify-content: space-between;
     margin: 25px 0px 0px 0px;
-    }
-header img{
+}
+
+header img
+{
     width: 100px;
 }
 
-header ul{
+header ul
+{
     list-style-type: none;
     width:500px;
     display: flex;
     justify-content: space-around;  
 }
-a:link {
+a:link 
+{
 
     text-decoration: none;        
 }
-.item1{
+.item1
+{
     color: #0065FC;
     border-top: solid 2px;
     padding: 30px 20px 0px 20px;
      
 }
-.item2{
+.item2
+{
     color: black;
 }
     
-.item3{
+.item3
+{
     font-weight: bold;
     color: #0065FC;
 }
-form{
+form
+{
    
     display:inline-flex;
     font-weight: bold;
 }
-form i{
+form i
+{
     padding: 17px;
     border-radius: 16px 0px 0px 16px;
     background-color: #F2F2F2;     
-    
+   
 }
 
-.barre{
+.barre
+{
     border-color: #F2F2F2;
     border-style: solid;
     padding-left: 30px;
@@ -75,7 +94,8 @@ form i{
     border-right-width: right;
 }
 
-.button {
+.button 
+{
     background-color: #0065FC;
     border-radius: 0px 16px 16px 0px;
     color: #FFFFFF;
@@ -85,7 +105,8 @@ form i{
     padding-right: 30px;
     font-size: medium;    
 }
-#filtres{
+#filtres
+{
     display: flex;
     justify-content: space-around;
     width: 75%;
@@ -94,23 +115,25 @@ form i{
     margin-bottom: 30px;
     margin-left: -30px;
 }
-#filtres p{
-    margin-right: -35px;
-}
-#filtres i{
+
+#filtres i
+{
     background-color:#DEEBFF ;
     color: #0065FC;
     border-radius: 50px 50px 50px 50px;
-    padding: 18px;
+    padding: 17px;
     position:relative;
-    left:17px;
-    width:16px;
+    left:20px;
+    width:19px;
+    text-align: center;
 }
-#filtres div{
+#filtres div
+{
     display: flex;
     
 }
-#eco p,#famille p,#love p,#pets p{
+.filter p
+{
 border: 2px #F2F2F2 solid;
 border-radius: 0px 30px 30px 0px;
 border-left: hidden;
@@ -122,26 +145,85 @@ padding-left: 27px;
 padding-right: 20px;
 }
 
-#info{
+#info
+{
     display: flex;
-    padding-left: 20px;
+  
 }
-#info i{
+
+#info i
+{
     color:#0066FC;
+    border: solid thin;
+    border-radius: 50px 50px 50px 50px;
+    padding: 4px;
+    width: 20px;
+    border-color: #F2F2F2;
+    height: 20px;
+    text-align: center;
 }
-#info p{
-    margin-top: -1px;
+
+#info p
+{
+    margin-top: 5px;
     padding-left: 15px;
 }
 
+#section2
+{
+    display: flex;
+    justify-content: space-between; 
+}
+#hebergement
+{
+    background-color: #F2F2F2;
+    border-radius: 20px 20px 20px 20px;
+}
 
-
-
-
-
-
-
+#card-container
+{
+    border-radius: 20px 20px 20px 20px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+} 
     
+#populaires
+{
+    background-color: #F2F2F2;
+    border-radius: 20px 20px 20px 20px;
+}
+.card
+{
+    border-radius: 20px 20px 20px 20px;
+    width: 25%;
+    padding: 7px;   
+    margin: 0px;
+    background-color: #FFFFFF;
+    border: solid;
+    margin-bottom: 70px;
+}
+#hebergement img{
+    width: 100%;
+    height: 140px;
+    border-radius: 20px 20px 0px 0px;
+    padding: 0px;
+    object-fit: cover;
+
+}
+#herbergement figcaption
+{
+    padding: 3px;
+    margin-top: -35px; 
+}
+.fa-star{
+    color: #0065FC;
+}
+.gris
+{
+    color:#F2F2F2;
+}  
+
     
     
     
