--- a/style.css
+++ b/style.css
@@ -199,7 +199,7 @@ h2{
     justify-content: space-around;
 }
 figcaption{
-padding-left: 10px;    
+padding-left: 20px;    
 }
 
     
@@ -208,7 +208,11 @@ padding-left: 10px;
     background-color: #F2F2F2;
     border-radius: 20px 20px 20px 20px;
     margin: 10px;
-    padding: 30px 20px 30px 30px;
+    padding: 30px 30px 30px 30px;
+}
+#populaires h2{
+    display:flex;
+    justify-content: space-between;
 }
 .card
 {
@@ -237,10 +241,10 @@ padding-left: 10px;
     color:#F2F2F2;
 }  
 #populaires img{
-    width: 42%;
+    width: 40%;
     border-radius: 20px 0px 0px 20px;
     object-fit: cover;
-    height:170px
+    height:185px
 }
 .card2
 {
@@ -250,7 +254,41 @@ padding-left: 10px;
     box-shadow: 10px 10px 16px #E3E3E3;
     margin: 10px 10px 30px ;
     padding: 5px;
-    padding-right: 42px;
+    padding-right: 99px;
+}
+
+
+
+
+
+
+
+
+
+
+#card-container3{
+    display: flex;
+}
+#section3 img{
+    border-radius: 20px 20px 20px 20px;
+    box-shadow: 10px 10px 16px #E3E3E3;
+    object-fit: cover;
+
+}
+
+
+
+
+footer{
+    background-color: #F2F2F2;
+}
+footer ul{
+    display: flex;
+    justify-content: space-between;
+    list-style-type: none;
+    width: 75%;
+    
+
 }
 
   
