--- a/style.css
+++ b/style.css
@@ -269,12 +269,40 @@ padding-left: 20px;
 #card-container3{
     display: flex;
 }
-#section3 img{
+
+
+#section3 figure{
+
     border-radius: 20px 20px 20px 20px;
     box-shadow: 10px 10px 16px #E3E3E3;
-    object-fit: cover;
+
 
 }
+
+
+.column{
+    display: flex;
+    flex-direction: column;
+  
+   justify-content: space-between;
+
+}
+
+.card3 img{
+    border-radius: 20px 20px 0px 0px;
+    object-fit: cover;
+    width: 325px;
+    height: 365px;
+
+}
+.column img{
+    border-radius: 20px 20px 0px 0px;
+    object-fit: cover;
+    width: 340px;
+    height: 133px;
+} 
+
+
 
 
 
