--- a/style.css
+++ b/style.css
@@ -175,6 +175,7 @@ padding-right: 20px;
 #section2
 {
     display: flex;
+    padding-bottom: 50px;
   
 }
 h2{
@@ -268,6 +269,8 @@ padding-left: 20px;
 
 #card-container3{
     display: flex;
+    padding-bottom: 85px;
+    justify-content: center
 }
 
 
@@ -275,36 +278,28 @@ padding-left: 20px;
 
     border-radius: 20px 20px 20px 20px;
     box-shadow: 10px 10px 16px #E3E3E3;
-
-
 }
-
 
 .column{
     display: flex;
     flex-direction: column;
   
    justify-content: space-between;
-
 }
 
 .card3 img{
     border-radius: 20px 20px 0px 0px;
     object-fit: cover;
-    width: 325px;
-    height: 365px;
+    width: 430px;
+    height: 545px;
 
 }
 .column img{
     border-radius: 20px 20px 0px 0px;
     object-fit: cover;
-    width: 340px;
-    height: 133px;
+    width: 490px;
+    height: 230px;
 } 
-
-
-
-
 
 
 footer{
