--- a/style.css
+++ b/style.css
@@ -50,16 +50,16 @@ header ul
 }
 a:link 
 {
-    
     text-decoration: none;        
 }
-a:visited
+
+#filtres a:visited
 {
-    color:black;
+    text-decoration: none;
+    color: black;
 }
-a:hover
+#filtres a:hover
 {
-background-color: #DEEBFF;
 font-size: 20px;
 }
 .item1
@@ -131,6 +131,7 @@ form i
     margin-bottom: 30px;
     width: 75%;
     justify-content: space-between;
+    color: black;
     
     
 }
@@ -482,25 +483,3 @@ footer ul {
 {
         width:100%
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
- 
-
-    
-    
