--- a/style.css
+++ b/style.css
@@ -20,11 +20,15 @@ body
     padding: 0px;
     margin: 0px;
 }
+#bloc_page
+{
+    margin: 20px;
+}
 
 img
 {
     width: 25%;
-    
+    object-fit: cover;
 }
 
 header
@@ -89,39 +93,61 @@ font-size: 20px;
 form
 {
    
-    display:inline-flex;
+    display: flex;
     font-weight: bold;
+    border-radius: 18px 18px 18px 18px;
+    border: solid 2px;
+    border-color: #F2F2F2;
+    width: 33%;
+    height: 45px;
     
 }
-form i
+.fa-map-marker-alt
 {
     padding: 17px;
     border-radius: 16px 0px 0px 16px;
-    background-color: #F2F2F2;     
-   
+    background-color: #F2F2F2;   
+    text-align: center;  
+    width: 10%;
 }
 
 .barre
 {
     border-color: #F2F2F2;
-    border-style: solid;
+    border-style: none;
     padding-left: 30px;
     padding-right: 30px;
     font-weight: bold;
     font-size: medium;
-    border-right-width: right;
+    width: 55%;
+   
 }
 
-.button 
+.bouton1
 {
     background-color: #0065FC;
     border-radius: 0px 16px 16px 0px;
     color: #FFFFFF;
     border-color: #0065fc;
     border-style: none;
-    padding-left: 30px;
-    padding-right: 30px;
-    font-size: medium;    
+    font-size: medium; 
+    flex-wrap: inherit;
+    display: none;
+    display: block;
+    width: 35%;   
+}
+.bouton2 
+{
+    background-color: #0065FC;
+    border-radius: 16px 16px 16px 16px;
+    color: #FFFFFF;
+    border-color: #0065FC;
+    border-style: none;
+    padding-left: 15px;
+    padding-right: 15px;
+    font-size: medium; 
+    display: block;
+    display: none;    
 }
 #filtres
 {
@@ -129,8 +155,8 @@ form i
     font-weight: bold;
     margin-top: 27px;
     margin-bottom: 30px;
-    width: 75%;
-    justify-content: space-between;
+    width: 70%;
+    justify-content: space-around;
     color: black;
     
     
@@ -141,35 +167,29 @@ form i
     background-color:#DEEBFF ;
     color: #0065FC;
     border-radius: 50px 50px 50px 50px;
-    padding: 17px;
-    position:relative;
-    left:20px;
+    padding: 17px;    
     width:17px;
     text-align: center;
 }
 #filtres div
 {
     display: flex;
+    border: 2px #F2F2F2 solid;
+    border-radius: 30px 30px 30px 30px;
+    padding-right: 17px;
+  
     
 }
-.filter p
+#filtres p
 {
-border: 2px #F2F2F2 solid;
-border-radius: 0px 30px 30px 0px;
-border-left: hidden;
-text-align: center;
-margin: 0px;
-padding: 9px;
-padding-top: 15px;
-padding-left: 27px;
-padding-right: 20px;
+    padding-left: 10px;
 }
+
 
 #info
 {
     display: flex;
     
-  
 }
 
 #info i
@@ -207,7 +227,7 @@ h2{
     width: 120%;
     padding: 30px 20px 30px 30px;
     margin: 10px;
-    
+    width: 75%;
 }
 
 #card-container
@@ -228,6 +248,7 @@ padding-left: 20px;
     border-radius: 20px 20px 20px 20px;
     margin: 10px;
     padding: 30px 30px 30px 30px;
+    width: 25%;
 }
 
 .card
@@ -297,16 +318,19 @@ padding-left: 20px;
     justify-content: center;
     width:100%;
     height:100%;
+    justify-content: space-around;
 }
 
 
-#section3 figure{
+#section3 figure
+{
 
     border-radius: 20px 20px 20px 20px;
     box-shadow: 10px 10px 16px #E3E3E3;
 }
 
-.column{
+.column
+{
     display: flex;
     flex-direction: column;
   
@@ -387,17 +411,54 @@ header li:last-child
 {
     width: 75%;
 }
-.button 
+form
+{
+   
+    display: flex;
+    font-weight: bold;
+    border-radius: 18px 18px 18px 18px;
+    border: solid 2px;
+    border-color: #F2F2F2;
+    width: 90%;
+    height: 45px;
+}
+.bouton1
 {
     background-color: #0065FC;
-    border-radius: 16px 16px 16px 16px;
+    border-radius: 0px 16px 16px 0px;
     color: #FFFFFF;
     border-color: #0065fc;
     border-style: none;
     padding-left: 30px;
     padding-right: 30px;
-    font-size: medium;    
+    font-size: medium; 
+    display: none;
+      
 }
+.bouton2 
+{
+    background-color: #0065FC;
+    border-radius: 16px 16px 16px 16px;
+    color: #FFFFFF;
+    border-color: #0065FC;
+    border-style: none;
+    padding-left: 15px;
+    padding-right: 15px;
+    font-size: medium; 
+    display: block;
+        
+}
+.barre
+{
+    border-color: #F2F2F2;
+    border-style: none;
+    font-weight: bold;
+    font-size: medium;
+    width: 75%;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
 #filtres p:first-child
 {
     width: 100%;
@@ -482,4 +543,5 @@ footer ul {
 #card-container3 img
 {
         width:100%
+}
 }
