--- a/style.css
+++ b/style.css
@@ -62,10 +62,7 @@ a:link
     text-decoration: none;
     color: black;
 }
-#filtres a:hover
-{
-font-size: 20px;
-}
+
 .item1
 {
     color: #0065FC;
@@ -183,13 +180,18 @@ form
 #filtres p
 {
     padding-left: 10px;
+    
+}
+.filter p:hover
+{
+    color: crimson;
 }
 
 
 #info
 {
     display: flex;
-    
+   
 }
 
 #info i
@@ -209,6 +211,7 @@ form
     margin-top: 5px;
     padding-left: 15px;
 }
+            /*SECTION 2*/
 
 #section2
 {
@@ -227,7 +230,8 @@ h2{
     width: 120%;
     padding: 30px 20px 30px 30px;
     margin: 10px;
-    width: 75%;
+    width: 70%;
+    height: 100%;
 }
 
 #card-container
@@ -237,8 +241,25 @@ h2{
     flex-wrap: wrap;
     justify-content: space-around;
 }
-figcaption{
-padding-left: 20px;    
+figcaption
+{
+    display: flex;
+    flex-direction: column;
+    margin: 0px;
+    padding: 15px;  
+    height: 65px; 
+}
+figcaption h3
+{
+    padding: 0px;
+    margin: 0;
+    padding-bottom: 5px;   
+}
+figcaption p
+{
+    padding: 0px;
+    margin: 0;
+    padding-bottom: 5px;   
 }
 
     
@@ -248,7 +269,7 @@ padding-left: 20px;
     border-radius: 20px 20px 20px 20px;
     margin: 10px;
     padding: 30px 30px 30px 30px;
-    width: 25%;
+    width: 30%;
 }
 
 .card
@@ -285,7 +306,7 @@ padding-left: 20px;
     width: 40%;
     border-radius: 20px 0px 0px 20px;
     object-fit: cover;
-    height:185px
+    height:150px
 }
 
 #populaires h2{
@@ -298,57 +319,64 @@ padding-left: 20px;
     border-radius: 20px 20px 20px 20px;
     background-color: #FFFFFF;
     box-shadow: 10px 10px 16px #E3E3E3;
-    margin: 10px 10px 30px ;
+    margin: 30px 13px 30px ;
     padding: 5px;
-    padding-right: 99px;
+    width: 90%;
 }
 
-
-
-
-
-
-
-
-
-
-#card-container3{
+#card-container3
+{
     display: flex;
     padding-bottom: 85px;
-    justify-content: center;
     width:100%;
-    height:100%;
-    justify-content: space-around;
+    justify-content: space-between;
+}
+
+#card-container3 figcaption
+{
+    margin: 0px;
+    padding: 15px;
+    height: 20px; 
 }
 
 
-#section3 figure
+#section3 .card3
 {
 
     border-radius: 20px 20px 20px 20px;
     box-shadow: 10px 10px 16px #E3E3E3;
+    width: 21%;
 }
 
 .column
 {
     display: flex;
     flex-direction: column;
-  
-   justify-content: space-between;
+    justify-content: center;
+    width: 25%;
 }
 
-.card3 img{
+.card3 img
+{
     border-radius: 20px 20px 0px 0px;
-    object-fit: cover;
-    width: 340px;
-    height: 455px;
+    width:100%;
+    height: 515px;
 
 }
-.column img{
+
+.column img
+{
     border-radius: 20px 20px 0px 0px;
-    object-fit: cover;
-    width: 340px;
-    height: 170px;
+    width:100%;
+    height: 215px;
+
+   
+} 
+.column figure
+{
+    border-radius: 20px 20px 20px 20px;
+    box-shadow: 10px 10px 16px #E3E3E3;
+     
 } 
 
 
