--- a/style.css
+++ b/style.css
@@ -756,8 +756,8 @@ footer ul
 }
 
 }
-            /*RESPONSIVE  GRAND SMARTPHONE */
-@media all and (min-width:376px) and (max-width:767px)
+            /*RESPONSIVE  MOYEN SMARTPHONE */
+@media all and (min-width:376px) and (max-width:425px)
 {
 #bloc_page
 {
@@ -796,7 +796,7 @@ header li
 {
     color: #0065FC;
     border-top: none;
-    padding: 0px 50px 10px 60px;
+    padding: 0px 50px 10px 50px;
     border-bottom: #0065FC solid;
                
              
@@ -805,7 +805,7 @@ header li
 {   
                 
     color: black;
-    padding: 0px 54px 15px 115px;
+    padding: 0px 50px 15px 100px;
                
                
 }
@@ -1079,7 +1079,330 @@ footer ul
     padding: 20px 0px 20px 20px;
 }
 }
-                
+@media all and (min-width:426px) and (max-width:767px)
+                /*RESPONSIVE GRAND SMARTPHONE */
+                {
+                    #bloc_page
+                    {
+                        margin: 0;
+                        width: 100%;           
+                    }
+                                /*HEADER */
+                    header
+                    {
+                        display: block;
+                        margin:0;    
+                    }
+                    nav 
+                    {
+                        width: 100%;
+                    }
+                                  
+                    header ul 
+                    {
+                        list-style-type: none;
+                        display: flex;
+                        width: 100%;
+                        padding: 0;
+                        border-bottom: #E3E3E3 solid;    
+                    }
+                                
+                    header li 
+                    {
+                        width: 40%;
+                        margin: 0px;
+                        padding-bottom: 10px;
+                    }
+                                
+                                
+                    .item1
+                    {
+                        color: #0065FC;
+                        border-top: none;
+                        padding: 0px 100px 10px 85px;
+                        border-bottom: #0065FC solid;
+                                   
+                                 
+                    }
+                    .item2
+                    {   
+                                    
+                        color: black;
+                        padding: 0px 70px 15px 160px;
+                                   
+                                   
+                    }
+                                    
+                    .item3
+                    {
+                        font-weight: bold;
+                        color: #0065FC;
+                        padding: 0;
+                        position: relative;
+                        right: 25px;
+                        bottom: 50px;
+                    }
+                                
+                                            /*SECTION 1 */
+                                
+                    #section1 h1
+                    {
+                        width: 75%;
+                        margin-top: 50px;
+                        margin-left: 10px
+                    }
+                    #section1 p
+                    {
+                        margin-left: 10px;
+                    }
+                    form
+                    {
+                                   
+                        display: flex;
+                        font-weight: bold;
+                        border-radius: 18px 18px 18px 18px;
+                        border: solid 2px;
+                        border-color: #F2F2F2;
+                        width: 90%;
+                        height: 50px;
+                        margin-top: 30px;
+                        margin-left: 10px
+                    }            
+                    .fa-map-marker-alt
+                    {
+                        padding: 17px;
+                        border-radius: 16px 0px 0px 16px;
+                        background-color: #F2F2F2;
+                        text-align: center;
+                        width: 5%;
+                    }
+                    .bouton1
+                    {
+                        background-color: #0065FC;
+                        border-radius: 0px 16px 16px 0px;
+                        color: #FFFFFF;
+                        border-color: #0065fc;
+                        border-style: none;
+                        padding-left: 30px;
+                        padding-right: 30px;
+                        font-size: medium; 
+                        display: none;                
+                                      
+                    }
+                    .bouton2 
+                    {
+                        background-color: #0065FC;
+                        border-radius: 16px 16px 16px 16px;
+                        color: #FFFFFF;
+                        border-color: #0065FC;
+                        border-style: none;
+                        padding-left: 15px;
+                        padding-right: 15px;
+                        font-size: medium; 
+                        display: block;
+                        width: 18%;
+                                        
+                    }            
+                    .barre
+                    {
+                        border-color: #F2F2F2;
+                        border-style: none;
+                        font-weight: bold;
+                        font-size: medium;
+                        width: 75%;
+                        padding-left: 10px;
+                        padding-right: 10px;
+                    }
+                                
+                    #filtres p:first-child
+                    {
+                        width: 100%;
+                    }
+                                
+                    #filtres 
+                    {
+                        display: flex;
+                        font-weight: bold;
+                        margin-top: 27px;
+                        margin-bottom: 30px;
+                        width:100%;
+                        flex-wrap: wrap;
+                        justify-content: left;
+                                
+                    }
+                    
+                    #filtres .filter
+                    {
+                        display: flex;
+                        border: 2px #F2F2F2 solid;
+                        border-radius: 30px 30px 30px 30px;
+                        padding-right: 40px;
+                        margin: 10px;
+                    }
+                    #info
+                    {
+                        display: flex;
+                        width: 82%;
+                        margin-left: 10px;
+                    }
+                    
+                    #info i 
+                    {
+                        color: #0066FC;
+                        border: solid thin;
+                        border-radius: 60px 60px 60px 60px;
+                        padding: 6px 6px 6px 6px;
+                        width: 20px;
+                        border-color: #F2F2F2;
+                        height: 16px;
+                        text-align: center;
+                    }
+                    #info p 
+                    {
+                        margin-top: 5px;
+                        padding-left: 8px;
+                        width: 90%;
+                        font-size: 15px;
+                    }
+                                
+                                            /*SECTION 2 */
+                    #hebergement 
+                    {
+                        background-color:transparent;
+                        border-radius: 20px 20px 20px 20px;
+                        width: 100%;
+                        padding: 0;
+                        margin: 10px 5px 10px 0px;
+                    }
+                    #hebergement h2
+                    {
+                        margin-left: 10px;
+                        width: 100%;
+                        padding-left: 0px;
+                    }
+                    .card 
+                    {
+                        border-radius: 20px 20px 20px 20px;
+                        margin: 0px;
+                        background-color: #FFFFFF;
+                        margin-bottom: 25px;
+                        box-shadow: 5px 5px 10px #E3E3E3;
+                        width: 100%;
+                    }
+                                
+                    #section2
+                    {
+                        display: flex;
+                        flex-flow: column-reverse;
+                        padding: 0;
+                        width: 100%;
+                    }
+                    #card-container
+                    {
+                        border-radius: 20px 20px 20px 20px;
+                        flex-wrap: wrap;
+                        display: flex;
+                        width: 95%;
+                        margin: 10px
+                    }
+                    .plus
+                    {
+                        margin-left: 10px;
+                    }        
+                                    
+                    #populaires 
+                    {
+                        background-color: #F2F2F2;
+                        border-radius: 0;
+                        margin: 0;
+                        padding: 0;
+                        width: 100%;
+                    }
+                    .card2 
+                    {
+                        display: flex;
+                        border-radius: 20px 20px 20px 20px;
+                        background-color: #FFFFFF;
+                        box-shadow: 10px 10px 16px #e3e3e3;
+                        margin: 10px 10px 30px;
+                        padding: 5px;
+                    }
+                    .card2 p:last-child 
+                    {
+                        padding-top: 35px;
+                    }
+                    figcaption 
+                    {
+                        display: flex;
+                        flex-direction: column;
+                        margin: 0px;
+                        padding: 10px;
+                        height: 65px;
+                    }
+                                            /*SECTION 3 */
+                                
+                    #section3
+                    {
+                        margin: 10px;
+                    } 
+                    #section3 h2 
+                    {
+                        padding-left: 0px;
+                    }
+                    #section3 .card3 
+                    {
+                        border-radius: 20px 20px 20px 20px;
+                        box-shadow: 10px 10px 16px #e3e3e3;
+                        width: 100%;
+                        height: 200px;
+                        margin: 0px 0px 20px 0px;
+                    }  
+                                
+                    #card-container3 
+                    {
+                        flex-direction: column;
+                        display: flex;
+                        width: 100%;
+                        padding:0;
+                        margin: 0;
+                    }
+                    #card-container3 img 
+                    {
+                                    
+                        height: 140px;
+                    }
+                    .column
+                    {
+                        width:100%;
+                        margin: 0;
+                                
+                    }
+                    .column figure 
+                    {
+                        border-radius: 20px 20px 20px 20px;
+                        box-shadow: 10px 10px 16px #e3e3e3;
+                        margin: 0px 0px 20px 0px;
+                        height: 200px;
+                        width: 100%;
+                    }
+                    .column img
+                    {
+                        height: 125px;
+                    }
+                    footer
+                    {
+                        width: auto;
+                    }
+                                
+                    footer ul 
+                    {
+                        display: flex;
+                        list-style-type: none;
+                        flex-direction: column;
+                        padding: 20px 0px 20px 20px;
+                    }
+                    }
+
             
                 /*RESPONSIVE TABLETTE */
 
